# epubie-lib

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
examples/: basic_usage.rs  debug_container.rs  debug_navigation.rs  debug_sample_book.rs
src/: epub.rs  lib.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
