[workspace]
members = [".", "wasm"]
resolver = "2"

[workspace.package]
version = "0.1.4"
authors = ["The Ducktor"]
license = "MIT"
repository = "https://github.com/The-Ducktor/epubie-lib"
homepage = "https://github.com/The-Ducktor/epubie-lib"
edition = "2021"

[package]
name = "epubie-lib"
version.workspace = true
edition.workspace = true
description = "A Rust library for parsing EPUB files"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["epub", "ebook", "parser", "library"]
categories = ["parser-implementations", "text-processing"]

[dependencies]
chrono = "0.4.41"
uuid = { version = "1.17.0", features = ["js"] }
zip = { version = "5.1.1", default-features = false, features = ["deflate"] }
regex = "1.11.1"
serde-xml-rs = "0.8.1"
serde = { version = "1", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]
