[package]
name = "epubie-wasm"
version = "0.1.3"
edition = "2021"
authors = ["The Ducktor"]
license = "MIT"
repository = "https://github.com/The-Ducktor/epubie-lib"
homepage = "https://github.com/The-Ducktor/epubie-lib"
description = "WASM wrapper for epubie-lib"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
epubie-lib = { path = ".." }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"

[profile.release]
lto = true
opt-level = "s"
