[package]
name = "epubie-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WASM wrapper for epubie-lib"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
epubie-lib = { path = ".." }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"

[profile.release]
lto = true
opt-level = "s"
